syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "PlayerDieType.proto";
import "StrengthenPointData.proto";


message DungeonPlayerDieNotify {
	uint32 wait_time = 2;
	uint32 murderer_entity_id = 4;
	uint32 revive_count = 8;
	uint32 dungeon_id = 5;
	PlayerDieType die_type = 12;
	map<uint32, StrengthenPointData> strengthen_point_data_map = 11;
	oneof entity {
		uint32 gadget_id = 3;
		uint32 monster_id = 9;
	}
}