syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "Vector.proto";


message PersonalSceneJumpRsp {
	int32 retcode = 3;
	uint32 dest_scene_id = 10;
	Vector dest_pos = 1;
}