syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "DungeonEnterPosInfo.proto";


message PlayerEnterDungeonReq {
	uint32 point_id = 2;
	uint32 dungeon_id = 1;
	DungeonEnterPosInfo enter_pos_info = 3;
}