syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message PlayerEnterDungeonRsp {
	int32 retcode = 5;
	uint32 point_id = 15;
	uint32 dungeon_id = 12;
}