syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message PlayerQuitDungeonRsp {
	int32 retcode = 8;
	uint32 point_id = 6;
}