syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message SceneTransToPointReq {
	uint32 point_id = 12;
	uint32 scene_id = 8;
}